# CorespaceWeigher

./: .gitignore  Cargo.toml  README.md  chaindata.json  config.toml  interface.rs  nohup.out  parachains.json  registry.json
.github/workflows/: tests.yaml
routes/: Cargo.toml  config.toml  mock-parachains.json
routes/mock-out/: Polkadot-2000.csv
routes/src/: consumption.rs  extend_subscription.rs  lib.rs  register.rs  registry.rs
routes/tests/: consumption.rs  extend_subscription.rs  mock.rs  register.rs  registry.rs
scripts/: init.sh  process.sh  reset_env.sh  watchdog.sh
shared/: Cargo.toml
shared/src/: chaindata.rs  config.rs  consumption.rs  lib.rs  payment.rs  registry.rs
src/: api.rs  main.rs  parachains.rs  server.rs  shared.rs  types.rs
types/: Cargo.toml
types/src/: lib.rs
