[package]
name = "weigher-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
parity-scale-codec = "3.6.5"
subxt = "0.32.1"
subxt-metadata = "0.32.1"
tokio = { version = "1", features = ["full"] }
