[package]
name = "routes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rocket = { version = "0.5.0", features=["json"] }
rocket_cors = "0.6.0"
serde = "1.0.193"
serde_json = "1.0.108"
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
subxt = "0.32.1"

types = { path = "../types" }
shared = { path = "../shared", features = ["test-utils"]}

[dev-dependencies]
maplit = "1.0.2"
scopeguard = "1.2.0"
