[package]
name = "shared"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
log = "0.4"
toml = "0.5.8"
serde = "1.0.193"
serde_json = "1.0.108"

types = { path = "../types" }

[features]
test-utils = []
