[package]
name = "shared"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
log = "0.4"
toml = "0.8.8"
serde = "1.0.193"
serde_json = "1.0.108"
subxt = "0.32.1"
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
parity-scale-codec = "3.6.9"

types = { path = "../types" }

[features]
test-utils = []
